Overflows fixed (2)

--- a/docs/_sass/_banners.scss
+++ b/docs/_sass/_banners.scss
@@ -23,8 +23,8 @@
   }
 
   .downloads {
-    border-spacing: 10px 5px;
-    margin-right: -10px;
+    border-spacing: 8px 4px;
+    margin-right: -8px;
 
     td {
       background-color: rgba(255, 192, 0, 0.4);
